	-- Fixed a rare Connection leak in WrapperConnectionPoolDataSource that occurs 
	   when Connection acquisition succeeds but construction of a PooledConnection
	   to wrap it fails with an Exception. Many thanks to Edward Chan for reporting
	   the issue.
	-- Fixed an error introduced in the 0.9.2 series, which caused MBeans
	   for PooledDataSources to be unregistered on close() under names different 
	   from that under which they were registered, creating a memory leak.
	   Many thanks to Vlad Skarzhevskyy for reporting this issue.
c3p0-0.9.5-pre4
	-- Updated documentation with user-defined configuration extensions and
	   information on how to define named configuration, per-user overrides,
	   and user-defined extensions in all three supported config file formats.
	-- Implemented user-defined configuration extensions.
	-- Implemented properties file and HOCON definition of named configurations
	   and per-user overrides.
	-- Added privilegeSpawnedThreads config parameter, mostly to detach caller's 
	   AccessControlContext from Threads that provoke the init, to prevent references from 
	   c3p0 Threads to app server (esp tomcat) ClassLoaders that ought to be garbage-
	   collectable on hot undeploy. Might also be useful for helping c3p0 run from less 
	   trusted code, although that has not come up yet. Thanks to Claudio D'angelo for 
	   calling attention to the issue.
	-- Added new config parameter 'contextClassLoaderSource', which can be set to one of 
	   'caller', 'library', or 'none'. By default, the Thread that provokes pool initialization
	   passes its ContextClassLoader to c3p0-spawned Threads, which makes it impossible to garbage
	   collect those classloaders in e.g. application server undeploys. Setting this parameter to
	   'library' (rather than the default 'caller') forces c3p0-spawned Threads to use the 
	   ClassLoader that loaded c3p0 as the contextClassLoader.  
	-- clone() System.getProperties() when reading config, to avoid potential 